# ragtime

./: Dockerfile  Makefile  README.md  inference.sh  pyproject.toml  run.sh  train.sh
.github/workflows/: build.yml  check.yml  merge.yml  pr.yml  test.yml
ragtime/: bart.py  batch_inference.py  device.py  direct_rag_example.py  extract_data.py  extract_dataset.py  inference.py  inference_plus_docs.py  main.py  model.py  prompt.py  rag_inference.py  rag_simple.py  train.py  train_bart.py  train_squad.py  train_trainer.py  train_translate.py  train_translate_custom.py
ragtime/examples/: README.md  train_trainer.py
ragtime/hf_rag_finetune/: rag_finetune.py
terraform/: README.md  main.tf
tests/: test_ragtime.py
wikibot/: device.py  main.py  rag_finetune.py  rag_finetune_orig.py  rag_medium.py  rag_simple.py
wikibot/hf_rag_finetune/: callbacks_rag.py  lightning_base.py  rag_finetune_orig.py
