[tool.poetry]
name = "ragtime"
version = "0.1.0"
description = ""
authors = ["Ben Lambert <blambert@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
train = 'ragtime.train:cli'
inference = 'ragtime.inference:cli'
batch-inference = 'ragtime.batch_inference:cli'
extract-dataset = 'ragtime.extract_dataset:cli'

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
datasets = "^2.16.1"
torch = "^2.1.2"
requests = "^2.31.0"
typer = "^0.9.0"
faiss-cpu = "^1.7.4"
accelerate = "^0.26.1"
evaluate = "^0.4.1"
halo = "^0.0.31"
wandb = "^0.16.3"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
isort = "^5.13.2"
types-requests = "^2.31.0.20240106"
pytest = "^8.0.0"
ruff = "^0.1.14"
types-tqdm = "^4.66.0.20240106"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ['ragtime/examples']

[[tool.mypy.overrides]]
module = [
    "accelerate.*",
    "datasets.*",
    "evaluate.*",
    "huggingface_hub.*",
    "transformers.*",
    "halo.*",
]
ignore_missing_imports = true

[tool.pylint.reports]
score = false

[tool.pylint."messages control"]
disable = ["duplicate-code"]
